config-root/namespaces/jx-staging/go-quickstart-test/go-quickstart-test-go-quickstart-test-deploy.yaml
# Source: go-quickstart-test/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-quickstart-test-go-quickstart-test
  labels:
    draft: draft-app
    chart: "go-quickstart-test-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  namespace: jx-staging
  annotations:
    wave.pusher.com/update-on-config-change: 'true'
spec:
  selector:
    matchLabels:
      app: go-quickstart-test-go-quickstart-test
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: go-quickstart-test-go-quickstart-test
    spec:
      containers:
        - name: go-quickstart-test
          image: "gcr.io/camunda-researchanddevelopment/go-quickstart-test:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
