config-root/namespaces/jx-staging/go-quickstart-test/go-quickstart-test-svc.yaml
# Source: go-quickstart-test/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-quickstart-test
  labels:
    chart: "go-quickstart-test-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    fabric8.io/expose: "true"
    fabric8.io/ingress.annotations: 'kubernetes.io/ingress.class: nginx'
  namespace: jx-staging
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: go-quickstart-test-go-quickstart-test
